--- a/Assignment_2.tex
+++ b/Assignment_2.tex
@@ -3,6 +3,7 @@
 \usepackage{dsfont}
 \usepackage{fullpage}
 \usepackage{mdframed}
+\usepackage{hyperref}
 \begin{document}
 \author{Adam J. Gray}
 \title{Assignment 2}
@@ -230,11 +231,27 @@ exists for all $ (\mathbf{x}, \mathbf{u}) \in X \times [a, b]^d $ and if there i
 \end{align}
 for every $ \mathbf{x} \in X $ and $ \mathbf{u} \in (a,b)^d $ then
 \begin{align}
-	\frac{d^\alpha}{d\mathbf{u}^\alpha} \int f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) = \int \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) \ \ \ \ \ \text{ for } \mathbf{u} \in (a,b)^d.
+	\frac{d^\alpha}{d\mathbf{u}^\alpha} \int f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) = \int \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) \ \ \ \ \ \text{ for } \mathbf{u} \in (a,b)^d
 \end{align}
 \textbf{Proof}
+
 We induct on $ |\alpha| $. For $ |\alpha| = 0 $ the result is degenerate.
-Suppose it is true for $ |\alpha| $ we wish to show that it is true for $ |\alpha| + 1 $.
+Suppose it is true for $ |\alpha| $ we wish to show that it is true for $ |\alpha| + 1 $. 
+If it is true for $ |\alpha| $ then we have that
+\begin{align}
+	\frac{d^\alpha}{d\mathbf{u}^\alpha} \int f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) = \int \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) \ \ \ \ \ \text{ for } \mathbf{u} \in (a,b)^d
+\end{align}
+then for $ |\alpha| + 1 $ with a derivative with respect to the $ ith $ component we would have
+\begin{align}
+	\frac{d}{du_i}\frac{d^\alpha}{d\mathbf{u}^\alpha} \int f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) = \frac{d}{du_i}\int \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) \ \ \ \ \ \text{ for } \mathbf{u} \in (a,b)^d
+\end{align}
+but by corollary 2.28 (2) we have
+\begin{align}
+	\frac{d}{du_i}\int \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x})
+ 	&= \int \frac{\partial }{\partial u_k} \frac{\partial^\alpha}{\partial \mathbf{u}^\alpha} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x})\\
+ 	&= \int \frac{\partial^{\alpha+1}}{\partial \mathbf{u}^{\alpha+1}} f(\mathbf{x}, \mathbf{u}) d\mu(\mathbf{x}) \ \ \ \ \ \text{ for } \mathbf{u} \in (a,b)^d
+\end{align}
+and so we have the result by induction. \footnote{We abused notation with $ |\alpha| + 1 $ and $ \alpha + 1 $ but by $ \alpha + 1 $ we mean we increase the order of the derivative of the $ ith $ variable. Also note that we assume that we can interchange the orders of differentiation (or combine them). This is only allowed if $ f $ has continuous partial derivatives of the appropriate order. For this case we assume this is ok.} 
 \end{mdframed}
 
 We have that 
@@ -291,12 +308,12 @@ Now appealing to a result in special functions we can say that
 \begin{align}
 	\int_K^\infty \frac{|\sin(ux)|}{Jx}dx = \lim_{x \lra \infty} \operatorname{Si}(ux)\operatorname{sgn}(\sin(ux)) -\operatorname{Si}(uK)\operatorname{sgn}(\sin(uK))
 \end{align}
-and it turns out that $ \frac{1}{J}\lim_{x\lra\infty} \operatorname{Si}(ux)\operatorname{sgn}(\sin(ux)) < \infty $ which means that 
+and it turns out that $ \frac{1}{J}\lim_{x\lra\infty} \operatorname{Si}(ux)\operatorname{sgn}(\sin(ux)) < \infty $ so long as $ u \neq 0 $ which means that 
 \begin{align}
 	\left|\frac{\partial}{\partial u} f(x) \cos(ux)\right| \in L^1(\mu)
 \end{align}
-for every $ u $. 
-We can then apply the dominated convergence theorem corollary 2.28 (2) to say that $ \hat{\mu}(u) $ is differentiable for all $ u $ and not just at $ 0 $.
+for every $ u \neq 0 $. 
+We can then apply the dominated convergence theorem corollary 2.28 (2) to say that $ \hat{\mu}(u) $ is differentiable for all $ u \neq 0 $ and by extension, sufficiently close to $ 0 $.
 \section{}
 Let $\mu$ be the binomial distribution with $ n $ trials and probability of success $ p $, that is $ \mu = \operatorname{Bin}(n,p) $, and let $ \nu $ be the Poisson distribution with mean $ \lambda > 0 $. 
 \subsection{}
@@ -405,5 +422,62 @@ Now
 \begin{align}
   \limsup_n( E_n ) = \bigcap_{n=1}^\infty \bigcup_{j=n}^\infty E_j 
 \end{align}
-can be intuatively read as $ E_j $ happens infinitely often. Which is to say that $ 5285 $ occurs \emph{blockwise} in the expansion of $ \omega $ infinitely often. Clearly as allowing for overlaps allows for more configurations then the probability is $ 1 $ (it can be no more). 
+can be intuitively read as $ E_j $ happens infinitely often. Which is to say that $ 5285 $ occurs \emph{blockwise} in the expansion of $ \omega $ infinitely often. Clearly as allowing for overlaps allows for more configurations then the probability is $ 1 $ (it can be no more). 
+
+\section{}
+We wish to prove that if $ X $ and $ Y $ are i.i.d random variables and $ X+Y $ and $ X-Y $ are independent then $ X $ and $ Y $ are normal. This result is actually called Bernstein's Theorem. (Actually there are lots of things called Bernstein's Theorem, but this is one of them.)\footnote{This proof is based off ideas from 
+
+\url{http://math.stackexchange.com/questions/556030/x-and-y-i-i-d-xy-and-x-y-independent-mathbbex-0-and-mathbb}}.
+
+Notice that we can write 
+\begin{align}
+	X = \frac{1}{2}((X+Y)+(X-Y)).
+\end{align}
+So if we write $ \hat{\mu_X}(u) $, $ \hat{\mu_Y}(u) $,$ \hat{\mu_{X+Y}}(u) $ and $ \hat{\mu_{X-Y}}(u)$ as the characteristic functions of $ X $, $ Y $, $X+Y $ and $ X-Y$ respectively we can write.
+\begin{align}
+	\hat{\mu_X}(u) =  \hat{\mu_{X+Y}}(\frac{u}{2}) \hat{\mu_{X-Y}}(\frac{u}{2})
+\end{align}
+because $ X+Y $ and $ X-Y $ are independent.
+Now because $ X $ and $ Y $ are independent we can further write
+\begin{align}
+\hat{\mu_X}(u) = \hat{\mu_X}(\frac{u}{2})^2 \hat{\mu_Y}(u/2)\hat{\mu_Y}(-\frac{u}{2}).
+\end{align}
+Now as $ X $ and $ Y $ are identically distributed they have the same characteristic function and so we can say $ \hat{\mu_X} \equiv \hat{\mu_Y} $ and hence from now on we just write $ \hat{\mu} $.
+\begin{align}
+	\hat{\mu}(u) = \hat{\mu}(\frac{u}{2})^3\hat{\mu}(-\frac{u}{2}).
+\end{align}
+Lets define $ \Psi(u) = \log(\hat{\mu}(u)) $. In this case the functional equation reduces to
+\begin{align}
+	\Psi(u) = 3 \Psi(\frac{u}{2}) + \Psi(-\frac{u}{2})
+\end{align}
+and
+\begin{align}
+	\Psi(-u) = 3 \Psi(-\frac{u}{2}) + \Psi(\frac{u}{2})
+\end{align}
+Now by defining $ \Xi(u) = \Psi(u) - \Psi(-u) $. We can reduce the functional equation to  $ \Xi(u) = 2\Xi(\frac{u}{2})$. Then
+\begin{align}
+	\Xi(\frac{u}{2^n}) = 2^n \Xi(u)
+\end{align}
+and by rearranging and dividing by $ t $ we get 
+\begin{align}
+	\frac{\Xi(u)}{u} = \frac{\Xi(\frac{u}{2^n})}{\frac{u}{2^n}}.
+\end{align}
+Now if $ \mathbb{E}[X] = \alpha $ and $ \mathbb{E}[X^2] = \beta $ (these values exist because of the assumption of finite variance) we get that
+$ \hat{\mu}'(0)= i\alpha $ and $ \hat{\mu}''(0) = -\beta $ by the results of 3.2 of this assignment. Now as $ \hat{\mu} $ is twice differentiable then so are $ \Xi $ and $ \Psi $.
+Now $ \Xi'(u) = 2\Psi'(u) $ and $ \Psi'(u) = \frac{\hat{\mu}'(u)}{\hat{\mu}(u)} $. Thus $ \Xi'(0) = 2i\alpha $ and since
+\begin{align}
+	\frac{\Xi(u)}{u} =\frac{\Xi(\frac{u}{2^n})}{\frac{u}{2^n}}
+\end{align}
+and 
+\begin{align}
+	\lim_{n\lra\infty} \frac{\Xi(\frac{u}{2^n})}{\frac{u}{2^n}} = \Xi'(0)
+\end{align}
+and thus $ \Xi[u] = i\alpha u $. 
+
+Now 
+\begin{align}
+ \Psi''(u) = \frac{\hat{\mu}''(u) \hat{\mu}(u) - (\hat{\mu}'{(u)})^2}{\hat{\mu}(u)^2}
+ \end{align}
+ and at zero this means $ \Psi''(0) = -\beta +\alpha^2 $.
+ By using the 
 \end{document}
