Mighty wizard skityl has invaded this repo

--- a/Talk/Talk.tex
+++ b/Talk/Talk.tex
@@ -84,6 +84,11 @@
 	\emph{weakly} as $ n \lra \infty $, where $ Z \sim \mathcal{N}(0,2) $
 \end{frame}
 
+\begin{frame}{Here is what a squiggly line looks like}
+\includegraphics[width=100mm]{stableProcess.png}
+
+\end{frame}
+
 \begin{frame}{Central Limit Theorem and Random Walks}
     We can extend this idea by introducing a scaling parameter $ \gamma $.
     \begin{align}
